# TensorNetworkBenchmarks

./: .gitignore  Makefile  README.md  report.typ
data/: tensornetwork.json
figures/: benchmark_comparison.typ
julia/: Project.toml  benchmark_OMEinsum.jl  runner.jl
profile/: README.md  nsys_OMEinsum.jl  permutedims-ncu.jl  permutedims.jl  profile_OMEinsum.jl
python/: benchmark_pytorch.py  generate_summary.py  pyproject.toml  pytorch-gpu-lsf.job
results/: julia_cpu.json  julia_gpu_cublas_1.json  julia_gpu_cutensor_1.json  pytorch_cpu.json  pytorch_gpu_1.json  summary.json
rust/: Cargo.toml
rust/src/: benchmark.rs
scripts/: NOTE.md  Project.toml  benchmark_OMEinsum.jl  benchmark_pytorch.py  julia-gpu-lsf.job  nsys_OMEinsum.jl  permutedims.jl  profile_OMEinsum.jl  tensornetwork.json  tensornetwork_permutation_optimized.json
