[package]
name = "omeinsum-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
omeinsum = { path = "/home/leo/rcode/omeinsum-rs" }
omeco = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
sysinfo = "0.30"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
